--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   src: url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Poppins:wght@300;400;500;700&display=swap");
 }
+
 @font-face {
-  font-family: "Fraunces";
+  font-family: 'Fraunces';
   src: url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap");
 }
+
 *, *::before, *::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -15,12 +18,16 @@ html {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
   margin: 0;
   padding: 0;
   font-size: 14px;
-  background-color: hsl(30deg, 38%, 92%);
+  background-color: #f2ebe3;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+  min-height: 100vh;
 }
 
 h1, h2, h3, h4, p, a {
@@ -32,68 +39,75 @@ a {
   text-decoration: none;
 }
 
-.wrapper {
-  margin-top: 5rem;
-  display: flex;
-  justify-content: center;
-}
 .wrapper .grid-container {
   width: 320px;
-  background-color: hsl(0deg, 0%, 100%);
+  background-color: white;
+  display: -ms-grid;
   display: grid;
   border-radius: 10px;
 }
+
 .wrapper .grid-container .item-details .item-class {
   text-transform: uppercase;
   font-weight: 500;
-  color: hsl(228deg, 12%, 48%);
+  color: #6c7289;
 }
+
 .wrapper .grid-container .item-details .item-name {
-  font-family: "Fraunces" !important;
+  font-family: 'Fraunces' !important;
   text-transform: capitalize;
   font-weight: 900;
   line-height: 1;
 }
+
 .wrapper .grid-container .item-details .item-description {
-  color: hsl(228deg, 12%, 48%);
+  color: #6c7289;
   font-weight: 500;
   display: inline-block;
 }
+
 .wrapper .grid-container .item-details .item-description::first-letter {
   text-transform: uppercase;
 }
+
 .wrapper .grid-container .item-details .footer {
   margin-bottom: 1.5rem;
 }
+
 .wrapper .grid-container .item-details .footer .price-tag .price {
-  font-family: "Courier New", Courier, monospace;
-  color: hsl(158deg, 36%, 37%);
+  font-family: 'Courier New', Courier, monospace;
+  color: #3c8067;
   font-weight: 900;
   margin-right: 0.8rem;
 }
+
 .wrapper .grid-container .item-details .footer .price-tag .discount {
   text-decoration: line-through;
   font-size: 1.3rem;
   position: relative;
   top: -0.5rem;
 }
+
 .wrapper .grid-container .item-details .footer button {
   padding: 1.5rem 2rem;
   width: 100%;
   border-radius: 10px;
   border: none;
-  background-color: hsl(158deg, 36%, 37%);
-  color: hsl(0deg, 0%, 100%);
+  background-color: #3c8067;
+  color: white;
   font-weight: 700;
+  -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   cursor: pointer;
 }
+
 .wrapper .grid-container .item-details .footer button img {
   vertical-align: middle;
   margin-right: 0.8rem;
 }
+
 .wrapper .grid-container .item-details .footer button:hover {
-  background-color: hsl(212deg, 21%, 14%);
+  background-color: #1c232b;
 }
 
 @media screen and (min-width: 375px) {
@@ -129,9 +143,11 @@ a {
     font-size: 3rem;
   }
 }
+
 @media screen and (min-width: 900px) {
   .grid-container {
-    grid-template-columns: 0.85fr 1fr;
+    -ms-grid-columns: 0.85fr 1fr;
+        grid-template-columns: 0.85fr 1fr;
     min-width: 650px;
   }
   .grid-container .item-image {
@@ -164,4 +180,5 @@ a {
   .grid-container .item-details .price-tag .price {
     font-size: 4rem;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+/*# sourceMappingURL=style.css.map */
